--- a/Resources/Prototypes/_Funkystation/Reagents/toxins.yml
+++ b/Resources/Prototypes/_Funkystation/Reagents/toxins.yml
@@ -1,6 +1,6 @@
 - type: reagent
   id: Heparin
-  name: Heparin
+  name: reagent-name-heparin
   group: Toxins
   desc: reagent-desc-heparin
   physicalDesc: reagent-physical-desc-shiny
@@ -29,7 +29,7 @@
 
 - type: reagent
   id: Rhigoxane # Reference to the old name for Hercuri on SS13, but directly a toxin.
-  name: Rhigoxane
+  name: reagent-name-rhigoxane
   group: Toxins
   desc: reagent-desc-rhigoxane
   physicalDesc: reagent-physical-desc-refreshing
@@ -47,7 +47,7 @@
 
 - type: reagent
   id: Spewium # ipecac+
-  name: Spewium
+  name: reagent-name-spewium
   group: Toxins
   desc: reagent-desc-spewium
   physicalDesc: reagent-physical-desc-overpowering
@@ -61,7 +61,7 @@
 
 - type: reagent
   id: Pestiline # Horseman of the Apocalypse >:3
-  name: Pestiline
+  name: reagent-name-pestiline
   group: Toxins
   desc: reagent-desc-pestiline
   flavor: punishment
