--- a/Resources/Prototypes/_Funkystation/Recipes/Reactions/toxins.yml
+++ b/Resources/Prototypes/_Funkystation/Recipes/Reactions/toxins.yml
@@ -43,7 +43,7 @@
       amount: 1
     PenteticAcid:
       amount: 1
-    Arithnazine:
+    Arithrazine:
       amount: 2
   products:
     Pestiline: 2
